implemented users search
