# service/api/api-handler.go
@@ -6,9 +6,13 @@ import (
 
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
-	// Register routes
-	rt.router.GET("/", rt.getHelloWorld)
-	rt.router.GET("/context", rt.wrap(rt.getContextReply))
+
+	//Session routes
+	rt.router.POST("/session", rt.wrap(rt.doLogin, false))
+
+	//User routes
+	rt.router.GET("/users/:usrId/others", rt.wrap(rt.GetUsers, true))
+	rt.router.PUT("/users/:usrId/image", rt.wrap(rt.SetMyPhoto, true))
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
