# service/api/set-my-photo.go
@@ -1,0 +1,28 @@
+package api
+
+import (
+	"net/http"
+	"strconv"
+
+	"git.sapienzaapps.it/fantasticcoffee/fantastic-coffee-decaffeinated/service/api/reqcontext"
+	"github.com/julienschmidt/httprouter"
+)
+
+func (rt *_router) SetMyPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	if r.Method != http.MethodPut {
+		w.WriteHeader(http.StatusMethodNotAllowed)
+		return
+	}
+
+	userid, err := strconv.Atoi(ps.ByName("usrId"))
+	if err != nil {
+		BadRequest(w, err, "Invalid userId", ctx)
+		return
+	}
+
+	if checkAuthorization(w, ctx, userid) != nil {
+		return
+	}
+
+}
